updated .bat script to match public distributions